CVS HEAD
  * Bug fixes:
    - fixed bug #66

JSampler v0.8a: 2007-12-06
  * Added new menu item: Help/Online Tutorial

  * Implemented support for retrieving instrument information
    from instrument files

  * Added support for monitoring the total number of active disk streams

  * Added Windows file path support

  * The volume values are now shown in decibels

  * Added confirmation dialog on exit

  * Fantasia:
    - Added option for turning off the custom window decoration
      (choose Edit/Preferences, then click the `View' tab)

  * Bug fixes:
    - The parameter changes were discarded when creating
      new audio/MIDI device
    - The orchestras changes were not saved for the next session
      when orchestras.xml does not exist in the JSampler's home directory
    - In some cases the sampler configuration was not exported
      properly to LSCP script
    - Fixed a bug in the parameter table occuring when combo box
      is used as cell editor
    - If there is a cell editing in progress in the parameter table,
      it is now finalized before creating new audio/MIDI device
    - Fantasia: Fixed the view of the channel's stream/voice count statistic
    - Some minor bugfixes and enhancements

JSampler v0.7a: 2007-10-15
  * Added options for choosing default actions when channel is
    created and assignment of default MIDI/audio drivers to be used
    (choose Edit/Preferences, then click the `Defaults' tab)

  * A lists of recently used instrument files, directories,
    database instruments, database directories are now available
    for quick access, where appropriate.

  * The locations of the last loaded instrument, last scanned
    instrument/directory, last added instrument to orchestra are
    now saved for the next session

  * The last used instrument selection method is now saved
    for the next session

  * Implemented automatic scrolling when new channel is created to
    ensure that it is visible on the screen
