@@ -1,6 +1,11 @@
 CVS HEAD
+  * Implemented a server list with option to manually choose a server
+    to connect on startup
+
   * Bug fixes:
     - fixed bug #66
+    - fixed a null pointer exception in the AudioDevicePane, when JACK
+      driver is used and the additional device parameters are shown.
 
 JSampler v0.8a: 2007-12-06
   * Added new menu item: Help/Online Tutorial
